--- a/youtube.html
+++ b/youtube.html
@@ -11,14 +11,75 @@
   </head>
 
     <body>
-      <input  class="searchbox"  type="text" placeholder="Search">
+      <div class="header">
+      <div class="left-section">
+        <img class="hamburger" src="icons/hamburger-menu.svg">
+        <img class="youtubelogo" src="icons/youtube-logo.svg">
+      </div>
+      <div class="middle-section">
+        <input  class="searchbox"  type="text" placeholder="Search">
+      <button class="searchicon">
+        <img class="search-icon" src="icons/search.svg">
+      <div class="tooltip">Search</div>
+      </button>
+      <button class="voiceicon">
+        <img class="voice-icon" src="icons/voice-search-icon.svg">
+        <div class="tooltip">Search with your voice</div>
+      </button>
+      </div>
+      <div class="right-section">
+        <div class="upload-icon-container"><img class="upload-icon" src="icons/upload.svg">
+          <div class="tooltip">Create</div>
+        </div>
+        <div class="apps-container">
+          <img class="apps-icon" src="icons/youtube-apps.svg">
+          <div class="tooltip">Apps</div>
+        </div>
+       <div class="notifications-container">
+        <div class="bell"><img class="notifications-icon" src="icons/notifications.svg">
+        <div class="notifications-count">16</div>
+        </div>
+        <div class="tooltip">Notifications</div>
+      </div>
+        <img class="channel-icon" src="icons/channels4_profile.jpg">
+      </div>
+     <div class="sidebar">
+      <div class="sidebar-link">
+      <img src="icons/home.svg"> 
+      <div>Home</div> 
+      </div>
+      <div class="sidebar-link">
+      <img src="icons/explore.svg"> 
+      <div>Explore</div> 
+      </div>
+      <div class="sidebar-link">
+      <img src="icons/subscriptions.svg">  
+    <div>subscriptions</div>  
+    </div>
+      <div class="sidebar-link">
+      <img src="icons/originals.svg">
+      <div>Originals</div>  
+      </div>
+      <div class="sidebar-link">
+      <img src="icons/youtube-music.svg">  
+    <div>Youtube Music</div>  
+    </div>
+      <div class="sidebar-link">
+      <img src="icons/library.svg">  
+    <div>Library</div>  
+    </div>
+    </div>
 
+    </div>
       <div class="video-grid">
 
         <div class="container">
           <div class="thumbnailrow">
-              <img class="thumbnail" src="thumbnails/thumbnail-1.webp">  
-        </div>
+      <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+      <div class="video-time">14:20
+    
+      </div>
+    </div>
       <div class="videoinfogrid">
         <div class="channelpicture"> 
           <img class="profilepicture" src="thumbnails/channel1.jpeg">
@@ -41,7 +102,8 @@
           <div class="container2">
             <div class="thumbnailrow">
                 <img class="thumbnail" src="thumbnails/thumbnail-2.webp">  
-          </div>
+                <div class="video-time">7:32</div>
+              </div>
         <div class="videoinfogrid">
           <div class="channelpicture"> 
             <img class="profilepicture" src="thumbnails/channel2.jpeg">
@@ -63,7 +125,8 @@
             <div class="container">
               <div class="thumbnailrow">
                   <img class="thumbnail" src="thumbnails/thumbnail3.webp">  
-            </div>
+                  <div class="video-time">4:05</div>
+                </div>
           <div class="videoinfogrid">
             <div class="channelpicture"> 
               <img class="profilepicture" src="thumbnails/channel3.jpeg">
@@ -86,7 +149,8 @@
               <div class="container2">
                 <div class="thumbnailrow">
                     <img class="thumbnail" src="thumbnails/thumbnail4.webp">  
-              </div>
+                    <div class="video-time">9:30</div>
+                  </div>
             <div class="videoinfogrid">
               <div class="channelpicture"> 
                 <img class="profilepicture" src="thumbnails/channel4.jpeg">
@@ -108,7 +172,8 @@
                 <div class="container">
           <div class="thumbnailrow">
               <img class="thumbnail" src="thumbnails/thumbnail5.webp">  
-        </div>
+              <div class="video-time">10:02</div>
+            </div>
       <div class="videoinfogrid">
         <div class="channelpicture"> 
           <img class="profilepicture" src="thumbnails/channel5.jpeg">
@@ -131,7 +196,8 @@
           <div class="container2">
             <div class="thumbnailrow">
                 <img class="thumbnail" src="thumbnails/thumbnail6.webp">  
-          </div>
+                <div class="video-time">8:52</div>
+              </div>
         <div class="videoinfogrid">
           <div class="channelpicture"> 
             <img class="profilepicture" src="thumbnails/channel6.jpeg">
@@ -152,7 +218,8 @@
             <div class="container">
               <div class="thumbnailrow">
                   <img class="thumbnail" src="thumbnails/thumbnail-7.webp">  
-            </div>
+                  <div class="video-time">3:42</div>
+                </div>
           <div class="videoinfogrid">
             <div class="channelpicture"> 
               <img class="profilepicture" src="thumbnails/channel7.jpeg">
@@ -175,7 +242,8 @@
               <div class="container2">
                 <div class="thumbnailrow">
                     <img class="thumbnail" src="thumbnails/thumbnail8.webp">  
-              </div>
+                    <div class="video-time">12:40</div>
+                  </div>
             <div class="videoinfogrid">
               <div class="channelpicture"> 
                 <img class="profilepicture" src="thumbnails/channel8.jpeg">
@@ -198,7 +266,8 @@
                   <div class="container2">
                     <div class="thumbnailrow">
                         <img class="thumbnail" src="thumbnails/thumbnail9.webp">  
-                  </div>
+                        <div class="video-time">6:30</div>
+                      </div>
                 <div class="videoinfogrid">
                   <div class="channelpicture"> 
                     <img class="profilepicture" src="thumbnails/channel9.jpeg">
@@ -221,7 +290,8 @@
                       <div class="container2">
                         <div class="thumbnailrow">
                             <img class="thumbnail" src="thumbnails/thumbnail10.webp">  
-                      </div>
+                            <div class="video-time">5:10</div>
+                          </div>
                     <div class="videoinfogrid">
                       <div class="channelpicture"> 
                         <img class="profilepicture" src="thumbnails/channel10.jpeg">
@@ -245,7 +315,8 @@
                       <div class="container2">
                         <div class="thumbnailrow">
                             <img class="thumbnail" src="thumbnails/thumbnail11.webp">  
-                      </div>
+                            <div class="video-time">9:13</div>
+                          </div>
                     <div class="videoinfogrid">
                       <div class="channelpicture"> 
                         <img class="profilepicture" src="thumbnails/channel11.jpeg">
@@ -267,7 +338,8 @@
                       <div class="container2">
                         <div class="thumbnailrow">
                             <img class="thumbnail" src="thumbnails/thumbnail12.webp">  
-                      </div>
+                            <div class="video-time">8:20</div>
+                          </div>
                     <div class="videoinfogrid">
                       <div class="channelpicture"> 
                         <img class="profilepicture" src="thumbnails/channel12.jpeg">
